--- a/ChallengeProductsMVC/ChallengeProductsMVC/wwwroot/css/site.css
+++ b/ChallengeProductsMVC/ChallengeProductsMVC/wwwroot/css/site.css
@@ -14,8 +14,16 @@ html {
 }
 
 body {
+    padding-top: 80px;
     padding-bottom: 20px;
-    padding-bottom: 20px;
-    padding-bottom: 20px;
-    margin-bottom: 60px;
+}
+
+body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.pdsa-action-button-column {
+    width: 4em;
+    text-align: center;
 }
