--- a/ChallengeProductsMVC/ChallengeProductsMVC/Views/Home/Index.cshtml
+++ b/ChallengeProductsMVC/ChallengeProductsMVC/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PTCData.TrainingProductViewModel
 
 @{
-    ViewData["Title"] = "Home Page";
+    //ViewData["Title"] = "Home Page";
     ViewBag.Title = "Uni Training";
 }
 @using (Html.BeginForm())
@@ -9,6 +9,7 @@
     <!-- BEGIN HIDDEN FIELDS AREA-->
     @Html.HiddenFor(m=>m.EventCommand)
     @Html.HiddenFor(m=>m.Mode)
+    @Html.HiddenFor(m=>m.EventArgument)
     <!-- END HIDDEN FIELDS AREA-->
     <!-- BEGIN SEARCH AREA-->
     if (Model.IsSearchAreaVisible)
@@ -19,9 +20,9 @@
                 <h1 class="panel-title">Search For Products</h1>
             </div>
             <div class="panel-body">
-                <div class="form-group">
+                <div class="form-group2">
                     @Html.LabelFor(m=>m.SearchEntity.ProductName,"Product Name")
-                    @Html.TextBoxFor(m=>m.SearchEntity.ProductName,new{@class="form-control"})
+                    @Html.TextBoxFor(m=>m.SearchEntity.ProductName, new{@class="form-control"})
                 </div>
             </div>
             <div class="panel-footer">
@@ -39,6 +40,11 @@
                         data-pdsa-action="add">
                     <i class="glyphicon glyphicon-plus-sign"></i>
                     &nbsp;Add
+                </button>
+                <button id="btnPaul" class="btn btn-sm btn-primary"
+                        data-pdsa-action="paul">
+                    <i class="glyphicon glyphicon-align-justify"></i>
+                    &nbsp;Paul
                 </button>
 
             </div>
@@ -123,6 +129,8 @@
                         <th>Introduction</th>
                         <th>Url</th>
                         <th>Price</th>
+                        <th class="pdsa-action-button-column">Delete</th>
+
                     </tr>
                 </thead>
                 <tbody>
@@ -130,14 +138,24 @@
                     {
                         <tr>
                             <td class="pdsa-action-button-column">
-                                <a href="#" data-pdsa-action="edit" class="btn btn-default btn-sm">
-                                    <span class="glyphicon glyphicon-search"></span>
+                                <a href="#" data-pdsa-action="edit"
+                                   data-pdsa-val="@item.ProductId"
+                                   class="btn btn-default btn-sm">
+                                    <i class="glyphicon glyphicon-search"></i>
                                 </a>
                             </td>
                             <td>@item.ProductName</td>
                             <td>@item.IntroductionDate</td>
                             <td>@item.Url</td>
                             <td>@item.Price.ToString("c")</td>
+                            <td class="pdsa-action-button-column">
+                                <a href="#" data-pdsa-action="delete"
+                                   data-pdsa-val="@item.ProductId"
+                                   onclick="return confirm('Delete this Product?');"
+                                   class="btn btn-default btn-sm">
+                                    <i class="glyphicon glyphicon-trash"></i>
+                                </a>
+                            </td>
                         </tr>
                     }
                 </tbody>
@@ -154,6 +172,10 @@
                 e.preventDefault();
 
                 $("#EventCommand").val($(this).data("pdsa-action"));
+
+                console.log($("#form").val());
+
+                $("#EventArgument").val($(this).data("pdsa-val"));
 
                 $("form").submit();
             });
